# forward-deployed-ai-workbench

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDEBUILD_DOCTRINE.md  GAP_ANALYSIS.md  GROKBUILD_DOCTRINE.md  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.claude/: settings.json
.claude/hooks/: README.md  require-verify.sh
docs/: architecture.md  demo_script.md  deployment.md
evals/: artifact_quality_scorecard.md  field_readiness_scorecard.md  security_scorecard.md
financial-crime-ops-console/: README.md
financial-crime-ops-console/fin_crime/apps/: streamlit_app.py
financial-crime-ops-console/fin_crime/core/: duckdb_store.py  exports.py  ingestion.py  scoring.py
financial-crime-ops-console/fixtures/: sample_transactions.csv
financial-crime-ops-console/specs/: product_brief.md
financial-crime-ops-console/tests/: test_fin_crime.py
financial-crime-ops-console/tests/golden_outputs/: fixture_case_summary.json
fixtures/: sample_sensor_log.txt  sample_telemetry.csv  sample_telemetry_snippet.json  sample_telemetry_snippet.xlsx
llm-red-team-eval-harness/: README.md
llm-red-team-eval-harness/fixtures/: redteam_suite.json
llm-red-team-eval-harness/redteam/apps/: streamlit_app.py
llm-red-team-eval-harness/redteam/core/: exports.py  runner.py  scoring.py  suite.py
llm-red-team-eval-harness/specs/: product_brief.md
llm-red-team-eval-harness/tests/: test_redteam.py
local-data-fusion-workbench/: README.md
local-data-fusion-workbench/fixtures/: customers.csv  events.json  transactions.csv
local-data-fusion-workbench/fusion/apps/: nicegui_app.py
local-data-fusion-workbench/fusion/core/: anomalies.py  (+7 more)
local-data-fusion-workbench/specs/: product_brief.md
local-data-fusion-workbench/tests/: test_fusion_workbench.py
prompts/: chatgpt_architect_prompt.md  claude_build_brief.md  codex_repair_brief.md  design_system_prompt.md  eval_harness_prompt.md  grok_build_brief.md
scripts/: capture_screenshots.py  smoke_ui.py  source_hash.sh  verify.sh
single-file-command-briefs/: README.md  index.html
skills/fin-crime-skill/: SKILL.md
skills/redteam-skill/: SKILL.md
skills/triage-skill/: SKILL.md
specs/: acceptance_criteria.md  data_contract.md  operator_workflow.md  product_brief.md  threat_model.md
src/apps/: nicegui_app.py  streamlit_app.py
src/core/: duckdb_store.py  exports.py  ingestion.py
src/schemas/: input_schema.json  output_schema.json  rca_packet_schema.json
tests/: test_duckdb_store.py  test_exports.py  test_golden_outputs.py  test_ingestion.py  test_smoke_ui.py
tests/golden_outputs/: fixture_scoring_summary.json
