[project]
name = "forward-deployed-ai-workbench"
version = "0.3.0"
description = "Local-first Forward-Deployed AI Systems Workbench portfolio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas==3.0.3",
  "numpy==2.5.1",
  "openpyxl==3.1.5",
  "pyarrow==24.0.0",
  "duckdb==1.5.4",
  "polars==1.42.1",
  "plotly==6.8.0",
  "altair==6.2.2",
  "pydeck==0.9.3",
  "streamlit==1.59.0",
  "nicegui==3.14.0",
  "fastapi==0.139.0",
  "uvicorn==0.50.2",
  "pydantic==2.13.4",
  "jsonschema==4.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.20",
  "black==26.5.1",
  "mypy==2.2.0",
  "bandit==1.9.4",
  "pip-audit==2.10.1",
  "playwright==1.61.0",
]
# Not installed by default. No surface calls a live model; the starter exports
# prompts for manual use. Adding this extra widens the blast radius described in
# specs/threat_model.md ("Telemetry in AI prompt export") and requires a re-review.
llm = [
  "openai==2.44.0",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "local-data-fusion-workbench/tests",
  "financial-crime-ops-console/tests",
  "llm-red-team-eval-harness/tests",
]
pythonpath = ["."]
markers = [
  "smoke: Playwright UI smoke checks (may start local servers)",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Keep the verify gate focused on real defects; pre-existing long UI strings are ignored.
select = ["E", "F"]
ignore = ["E501"]
